[profile.release]
panic = "unwind"

[profile.production]
codegen-units = 1
inherits = "release"
lto = true

[workspace.package]
authors = [ "R0GUE <go@r0gue.io>" ]
description = "Pop Network makes it easy for smart contract developers to use the Power of Polkadot."
edition = "2021"
homepage = "https://r0gue.io"
license = "Unlicense"
repository = "https://github.com/r0gue-io/pop-node/"

[workspace]
exclude = [
	"extension/contract",
	"pop-api",
	"tests/contracts",
]
members = [
	"integration-tests",
	"node",
	"pallets/*",
	"pop-api/integration-tests",
	"primitives",
	"runtime/devnet",
	"runtime/mainnet",
	"runtime/testnet",
]

resolver = "2"

[workspace.dependencies]
anyhow = { version = "1.0.81", default-features = false }
clap = { version = "4.5.13", features = [ "derive" ] }
codec = { package = "parity-scale-codec", version = "3.7.4", default-features = false, features = [
	"derive",
] }
color-print = "0.3.4"
contract-build = { git = "https://github.com/use-ink/cargo-contract", branch = "v5-rust-stable" }
docify = "0.2.9"
enumflags2 = "0.7.11"
env_logger = "0.11.5"
futures = "0.3.31"
hex = "0.4.3"
hex-literal = "0.4.1"
impl-trait-for-tuples = "0.2.2"
jsonrpsee = { version = "0.24.3", features = [ "server" ] }
log = { version = "0.4.22", default-features = false }
rand = "0.8.5"
scale-info = { version = "2.11.6", default-features = false, features = [
	"derive",
] }
serde = "1.0.214"
serde_json = { version = "1.0.132", default-features = false }
smallvec = "1.11.2"
subxt = "0.38.1"
subxt-signer = "0.38.0"
tokio = { version = "1.40.0", features = [ "macros", "rt-multi-thread", "time" ] }
tracing-subscriber = { version = "0.3.18", default-features = false }

# Build
substrate-build-script-utils = { version = "11.0.0" }
substrate-wasm-builder = { version = "26.0.1" }

# Local
pallet-api = { path = "pallets/api", default-features = false }
pallet-motion = { path = "pallets/motion", default-features = false }
pallet-nfts = { path = "pallets/nfts", default-features = false }
pop-chain-extension = { path = "./extension", default-features = false }
pop-primitives = { path = "./primitives", default-features = false }
pop-runtime-common = { path = "runtime/common", default-features = false }
pop-runtime-devnet = { path = "runtime/devnet", default-features = true }   # default-features=true required for `-p pop-node` builds
pop-runtime-mainnet = { path = "runtime/mainnet", default-features = true } # default-features=true required for `-p pop-node` builds
pop-runtime-testnet = { path = "runtime/testnet", default-features = true } # default-features=true required for `-p pop-node` builds

# Substrate
# Dependencies changed to point to the tag for stable 2503-4 release as we needed a patch in pallet-session
# that wasn't released in crates.io for testnet runtime v0.5.3
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
frame-benchmarking-cli = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77" }
frame-executive = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
frame-metadata = { version = "23.0.0", default-features = false }
frame-metadata-hash-extension = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
frame-system-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
frame-try-runtime = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
pallet-assets = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
pallet-aura = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
pallet-authorship = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
pallet-collective = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
pallet-contracts = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
pallet-message-queue = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
pallet-migrations = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
pallet-multisig = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
pallet-nft-fractionalization = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
pallet-nfts-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
pallet-nfts-sdk = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", package = "pallet-nfts", default-features = false }
pallet-preimage = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
pallet-proxy = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
pallet-revive = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
pallet-scheduler = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
pallet-session = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
pallet-treasury = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
pallet-utility = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
prometheus-endpoint = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false, package = "substrate-prometheus-endpoint" }
sc-basic-authorship = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77" }
sc-chain-spec = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77" }
sc-cli = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77" }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77" }
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77" }
sc-executor = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77" }
sc-network = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77" }
sc-network-sync = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77" }
sc-offchain = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77" }
sc-rpc = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77" }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77" }
sc-sysinfo = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77" }
sc-telemetry = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77" }
sc-tracing = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77" }
sc-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77" }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
sp-authority-discovery = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77" }
sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
sp-consensus-babe = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
sp-consensus-beefy = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
sp-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
sp-genesis-builder = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
sp-keystore = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77" }
sp-mmr-primitives = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
sp-session = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77" }
sp-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
sp-version = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77" }

# Polkadot
# Dependencies changed to point to the tag for stable 2503-4 release as we needed a patch in pallet-session
# that wasn't released in crates.io for testnet runtime v0.5.3
pallet-xcm = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
pallet-xcm-benchmarks = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
polkadot-cli = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77" }
polkadot-parachain-primitives = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
rococo-runtime = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
rococo-runtime-constants = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
xcm = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", package = "staging-xcm", default-features = false }
xcm-builder = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", package = "staging-xcm-builder", default-features = false }
xcm-executor = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", package = "staging-xcm-executor", default-features = false }
xcm-runtime-apis = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }

# Cumulus
# Dependencies changed to point to the tag for stable 2503-4 release as we needed a patch in pallet-session
# that wasn't released in crates.io for testnet runtime v0.5.3
asset-test-utils = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
cumulus-client-cli = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77" }
cumulus-client-collator = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77" }
cumulus-client-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77" }
cumulus-client-consensus-common = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77" }
cumulus-client-consensus-proposer = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77" }
cumulus-client-service = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77" }
cumulus-pallet-aura-ext = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
cumulus-pallet-session-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
cumulus-pallet-weight-reclaim = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
cumulus-pallet-xcm = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
cumulus-primitives-aura = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
cumulus-primitives-core = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77" }
cumulus-primitives-utility = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
cumulus-relay-chain-interface = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77" }
emulated-integration-tests-common = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
pallet-collator-selection = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }
parachain-info = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", package = "staging-parachain-info", default-features = false }
parachains-common = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }

# Runtimes
# Dependencies changed to point to the tag for stable 2503-4 release as we needed a patch in pallet-session
# that wasn't released in crates.io for testnet runtime v0.5.3
asset-hub-paseo-runtime = { git = "https://github.com/paseo-network/runtimes", default-features = false, tag = "v1.4.3" }
asset-hub-westend-runtime = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77" }
paseo-runtime = { git = "https://github.com/paseo-network/runtimes", default-features = false, tag = "v1.4.3" }
paseo-runtime-constants = { git = "https://github.com/paseo-network/runtimes", default-features = false, tag = "v1.4.3" }
westend-runtime = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77" }
westend-runtime-constants = { git = "https://github.com/paritytech/polkadot-sdk", rev = "a251f77", default-features = false }

ismp = { git = "https://github.com/r0gue-io/ismp", branch = "polkadot-stable2506", default-features = false }
ismp-parachain = { git = "https://github.com/r0gue-io/ismp", branch = "polkadot-stable2506", default-features = false }
ismp-parachain-inherent = { git = "https://github.com/r0gue-io/ismp", branch = "polkadot-stable2506", default-features = false }
ismp-parachain-runtime-api = { git = "https://github.com/r0gue-io/ismp", branch = "polkadot-stable2506", default-features = false }
pallet-ismp = { git = "https://github.com/r0gue-io/ismp", branch = "polkadot-stable2506", default-features = false }
pallet-ismp-rpc = { git = "https://github.com/r0gue-io/ismp", branch = "polkadot-stable2506", default-features = false }
pallet-ismp-runtime-api = { git = "https://github.com/r0gue-io/ismp", branch = "polkadot-stable2506", default-features = false }
