[package]
name = "emulated-integration-tests"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
codec = { workspace = true }
assert_matches = "1.5.0"


# Substrate
frame-support = { workspace = true }
pallet-assets = { workspace = true }
pallet-balances = { workspace = true }
pallet-message-queue = { workspace = true }
sp-core = { workspace = true }
sp-authority-discovery = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.1", default-features = false }
sp-consensus-babe = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.1", default-features = false }
sp-consensus-beefy = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.1", default-features = false }
sp-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.1", default-features = false }
sp-runtime = { workspace = true }

# Polkadot
polkadot-primitives = { workspace = true }
rococo-runtime-constants = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.1" }
rococo-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.1" }
xcm = { workspace = true }
xcm-executor = { workspace = true }

# Cumulus
asset-hub-rococo-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.1", default-features = false }
asset-test-utils = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.1", default-features = false }
cumulus-primitives-core = { workspace = true }
emulated-integration-tests-common = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.1", default-features = false }
parachains-common = { workspace = true }

# Local
pop-runtime = { path = "../runtime", default-features = false }
#testnet-parachains-constants = { workspace = true }

[features]
default = ["std"]
std = [
    "asset-hub-rococo-runtime/std",
    "asset-test-utils/std",
    "pallet-assets/std",
    "pallet-balances/std",
    "pallet-message-queue/std", 
    "pop-runtime/std",
    "rococo-runtime/std",
    "rococo-runtime-constants/std",
    "sp-authority-discovery/std",
    "sp-consensus-babe/std",
    "sp-consensus-beefy/std",
    "sp-consensus-grandpa/std",
]

