[package]
name = "pop-chain-extension"
version = "0.1.0"
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec.workspace = true
impl-trait-for-tuples.workspace = true
log.workspace = true

# Substrate
frame-support.workspace = true
frame-system.workspace = true
pallet-contracts.workspace = true
sp-core.workspace = true
sp-runtime.workspace = true
sp-std.workspace = true

[dev-dependencies]
contract-build.workspace = true
env_logger.workspace = true
pallet-balances.workspace = true
pallet-contracts.workspace = true
pallet-timestamp.workspace = true
rand.workspace = true
scale-info.workspace = true
sp-io.workspace = true

[features]
default = ["std"]
std = [
    "log/std",
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-balances/std",
    "pallet-contracts/std",
    "pallet-timestamp/std",
    "sp-runtime/std",
    "sp-core/std",
    "sp-io/std",
    "sp-std/std",
]
runtime-benchmarks = [
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-contracts/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
