[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "pop-chain-extension"
publish = false
repository.workspace = true
version = "0.1.0"

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[dependencies]
codec.workspace = true
impl-trait-for-tuples.workspace = true
log.workspace = true

# Substrate
frame-support.workspace = true
frame-system.workspace = true
pallet-revive.workspace = true
sp-core.workspace = true
sp-runtime.workspace = true
sp-std.workspace = true

[dev-dependencies]
contract-build.workspace = true
env_logger.workspace = true
pallet-balances.workspace = true
pallet-timestamp.workspace = true
rand.workspace = true
scale-info.workspace = true
sp-io.workspace = true

[features]
default = [ "std" ]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-revive/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"pallet-balances/std",
	"pallet-revive/std",
	"pallet-timestamp/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
