[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "integration-tests"
repository.workspace = true

[dev-dependencies]
codec.workspace = true
tracing-subscriber = { workspace = true, features = [
	"env-filter",
	"fmt",
	"std",
	"tracing-log",
] }

# Substrate
frame-support.workspace = true
pallet-assets.workspace = true
pallet-balances.workspace = true
pallet-contracts.workspace = true
pallet-message-queue.workspace = true
sp-authority-discovery.workspace = true
sp-consensus-aura.workspace = true
sp-consensus-babe.workspace = true
sp-consensus-beefy.workspace = true
sp-consensus-grandpa.workspace = true
sp-core.workspace = true
sp-io.workspace = true
sp-runtime.workspace = true

# Polkadot
pallet-xcm.workspace = true
polkadot-primitives.workspace = true
polkadot-runtime-parachains.workspace = true
xcm.workspace = true
xcm-executor.workspace = true

# Cumulus
asset-test-utils.workspace = true
cumulus-primitives-core.workspace = true
emulated-integration-tests-common.workspace = true

# Paseo
asset-hub-paseo-runtime.workspace = true
paseo-runtime.workspace = true
paseo-runtime-constants.workspace = true

# Local
pop-runtime-common.workspace = true
pop-runtime-devnet.workspace = true
pop-runtime-mainnet.workspace = true

[features]
default = [ "std" ]
mainnet = [ "pop-runtime-mainnet/default" ]
std = [
	"asset-hub-paseo-runtime/std",
	"cumulus-primitives-core/std",
	"frame-support/std",
	"pallet-assets/std",
	"pallet-balances/std",
	"pallet-contracts/std",
	"pallet-message-queue/std",
	"pallet-xcm/std",
	"paseo-runtime-constants/std",
	"paseo-runtime/std",
	"polkadot-primitives/std",
	"polkadot-runtime-parachains/std",
	"pop-runtime-common/std",
	"pop-runtime-devnet/std",
	"pop-runtime-mainnet/std",
	"sp-authority-discovery/std",
	"sp-consensus-aura/std",
	"sp-consensus-babe/std",
	"sp-consensus-beefy/std",
	"sp-consensus-grandpa/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"xcm-executor/std",
	"xcm/std",
]

runtime-benchmarks = [
	"asset-hub-paseo-runtime/runtime-benchmarks",
	"cumulus-primitives-core/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-contracts/runtime-benchmarks",
	"pallet-message-queue/runtime-benchmarks",
	"paseo-runtime/runtime-benchmarks",
	"polkadot-primitives/runtime-benchmarks",
	"pop-runtime-common/runtime-benchmarks",
	"pop-runtime-devnet/runtime-benchmarks",
	"pop-runtime-mainnet/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"xcm-executor/runtime-benchmarks",
]

try-runtime = [
	"asset-hub-paseo-runtime/try-runtime",
	"frame-support/try-runtime",
	"pallet-assets/try-runtime",
	"pallet-balances/std",
	"pallet-contracts/std",
	"pallet-message-queue/try-runtime",
	"paseo-runtime/try-runtime",
	"pop-runtime-devnet/try-runtime",
	"pop-runtime-mainnet/try-runtime",
	"sp-runtime/try-runtime",
]
