[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "integration-tests"
repository.workspace = true

[dependencies]
codec.workspace = true
tracing-subscriber = { workspace = true, features = [
    "env-filter",
    "fmt",
    "std",
    "tracing-log",
] }

# Substrate
frame-support.workspace = true
pallet-assets.workspace = true
pallet-balances.workspace = true
pallet-message-queue.workspace = true
sp-authority-discovery.workspace = true
sp-consensus-aura.workspace = true
sp-consensus-babe.workspace = true
sp-consensus-beefy.workspace = true
sp-consensus-grandpa.workspace = true
sp-core.workspace = true
sp-runtime.workspace = true

# Polkadot
pallet-xcm.workspace = true
polkadot-primitives.workspace = true
polkadot-runtime-parachains.workspace = true
xcm.workspace = true
xcm-executor.workspace = true

# Cumulus
asset-test-utils.workspace = true
cumulus-primitives-core.workspace = true
emulated-integration-tests-common.workspace = true

# Runtimes
asset-hub-paseo-runtime = { workspace = true, optional = true }
asset-hub-westend-runtime = { workspace = true, optional = true }
paseo-runtime = { workspace = true, optional = true }
paseo-runtime-constants = { workspace = true, optional = true }
westend-runtime = { workspace = true, optional = true }
westend-runtime-constants = { workspace = true, optional = true }

# Local
pop-runtime-common.workspace = true
pop-runtime-devnet.workspace = true
pop-runtime-mainnet.workspace = true

[features]
default = ["westend"]
mainnet = ["pop-runtime-mainnet/default"]
paseo = [
    "asset-hub-paseo-runtime",
    "paseo-runtime",
    "paseo-runtime-constants",
]
westend = [
    "asset-hub-westend-runtime",
    "westend-runtime",
    "westend-runtime-constants",
]