[package]
authors.workspace = true
build = "build.rs"
description.workspace = true
edition.workspace = true
homepage.workspace = true
license = "Unlicense"
name = "pop-node"
publish = false
repository.workspace = true
version = "0.2.0-alpha"

[dependencies]
clap.workspace = true
codec.workspace = true
futures.workspace = true
jsonrpsee = { workspace = true, features = [ "server" ] }
log.workspace = true
serde.workspace = true
serde_json.workspace = true

# Local
pop-runtime-common.workspace = true
pop-runtime-devnet.workspace = true
pop-runtime-mainnet.workspace = true
pop-runtime-testnet.workspace = true

# Substrate
frame-benchmarking.workspace = true
frame-benchmarking-cli.workspace = true
pallet-transaction-payment-rpc.workspace = true
prometheus-endpoint.workspace = true
sc-basic-authorship.workspace = true
sc-chain-spec.workspace = true
sc-cli.workspace = true
sc-client-api.workspace = true
sc-consensus.workspace = true
sc-executor.workspace = true
sc-network.workspace = true
sc-network-sync.workspace = true
sc-offchain.workspace = true
sc-rpc.workspace = true
sc-service.workspace = true
sc-sysinfo.workspace = true
sc-telemetry.workspace = true
sc-tracing.workspace = true
sc-transaction-pool.workspace = true
sc-transaction-pool-api.workspace = true
sp-api.workspace = true
sp-block-builder.workspace = true
sp-blockchain.workspace = true
sp-consensus-aura.workspace = true
sp-core.workspace = true
sp-io.workspace = true
sp-keystore.workspace = true
sp-offchain.workspace = true
sp-runtime.workspace = true
sp-session.workspace = true
sp-timestamp.workspace = true
sp-transaction-pool.workspace = true
substrate-frame-rpc-system.workspace = true

# Polkadot
polkadot-cli.workspace = true
polkadot-primitives.workspace = true
xcm.workspace = true

# Cumulus
color-print.workspace = true
cumulus-client-cli.workspace = true
cumulus-client-collator.workspace = true
cumulus-client-consensus-aura.workspace = true
cumulus-client-consensus-common.workspace = true
cumulus-client-consensus-proposer.workspace = true
cumulus-client-service.workspace = true
cumulus-primitives-aura.workspace = true
cumulus-primitives-core.workspace = true
cumulus-primitives-parachain-inherent.workspace = true
cumulus-relay-chain-interface.workspace = true

# ismp
ismp-parachain.workspace = true
ismp-parachain-inherent.workspace = true
ismp-parachain-runtime-api.workspace = true
pallet-ismp-rpc.workspace = true
pallet-ismp-runtime-api.workspace = true

[build-dependencies]
substrate-build-script-utils.workspace = true

[dev-dependencies]
pallet-multisig.workspace = true

[features]
runtime-benchmarks = [
	"cumulus-primitives-core/runtime-benchmarks",
	"frame-benchmarking-cli/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"polkadot-cli/runtime-benchmarks",
	"polkadot-primitives/runtime-benchmarks",
	"pop-runtime-common/runtime-benchmarks",
	"pop-runtime-devnet/runtime-benchmarks",
	"pop-runtime-mainnet/runtime-benchmarks",
	"pop-runtime-testnet/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"polkadot-cli/try-runtime",
	"pop-runtime-devnet/try-runtime",
	"pop-runtime-mainnet/try-runtime",
	"pop-runtime-testnet/try-runtime",
	"sp-runtime/try-runtime",
]

ismp = [ "pop-runtime-devnet/default" ]
on-chain-release-build = [ "pop-runtime-mainnet/on-chain-release-build" ]
